# E-app/apps/auth-service/src/routes/auth.router.ts
@@ -1,9 +1,10 @@
 import express, {Router} from "express";
-import { userRegistration, verifyUser } from "../controller/auth.controller";
+import { userLogin, userRegistration, verifyUser } from "../controller/auth.controller";
 
 const router:Router = express.Router();
 
 router.post("/user-registration", userRegistration);
 router.post("/verify-user", verifyUser);
+router.post("/user-login", userLogin);
 
 export default router;
